--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 .content {
   height: calc(100vh - 134px);
-  overflow-y: scroll;
+  overflow-y: overlay;
   overflow-x: hidden;
   padding: 0 50px;
 }
