--- a/src/pages/portfolio/portfolioPage.module.css
+++ b/src/pages/portfolio/portfolioPage.module.css
@@ -3,10 +3,9 @@
   flex-direction: column;
 }
 .info {
-  display: flex;
-  margin-top: 10px;
+  padding: 10px 0;
 }
-.info div {
+.info > div {
   margin-right: 20px;
 }
 
